--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.10.0",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/olaririkas/rikas-webhook.git"
+  },
+  "bugs": {
+    "url": "https://github.com/olaririkas/rikas-webhook/issues"
+  },
+  "homepage": "https://github.com/olaririkas/rikas-webhook#readme",
+  "description": ""
 }
