--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "rikas-webhook",
   "version": "1.0.0",
+  "description": "Webhook server for VUBOOK and Botpress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Olari Rikas",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.10.0",
@@ -16,11 +17,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/olaririkas/rikas-webhook.git"
+    "url": "https://github.com/OlariRikas/rikas-webhook.git"
   },
   "bugs": {
-    "url": "https://github.com/olaririkas/rikas-webhook/issues"
+    "url": "https://github.com/OlariRikas/rikas-webhook/issues"
   },
-  "homepage": "https://github.com/olaririkas/rikas-webhook#readme",
-  "description": ""
+  "homepage": "https://github.com/OlariRikas/rikas-webhook#readme"
 }
+
