Muudetud WuBook API URL uueks

--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ PORT=3000
 BOTPRESS_TOKEN=bp_pat_IcHdrIUC02JcVWTGAOUGAuHx4caOcHJe2aQq
 BOTPRESS_WEBHOOK_URL=https://webhook.botpress.cloud/af21a8a8-6e0a-4a72-a110-4f2b9c52b42f
 VUBOOK_API_KEY=wb_51e1c740-3b92-11eb-8a4b-001a4a5c09cf
-VUBOOK_API_URL=https://wubook.net/xrws/resa
+VUBOOK_API_URL=https://wired.wubook.net/xrws/</string></value>
+
+
 
 
