--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.10.0",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
-    "node-fetch": "^3.3.2"
+    "fast-xml-parser": "^5.2.5",
+    "node-fetch": "^3.3.2",
+    "qs": "^6.14.0"
   },
   "repository": {
     "type": "git",
@@ -24,4 +26,3 @@
   },
   "homepage": "https://github.com/OlariRikas/rikas-webhook#readme"
 }
-
