--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.10.0",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "fast-xml-parser": "^5.2.5",
     "node-fetch": "^3.3.2",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/OlariRikas/rikas-webhook.git"
+    "url": "git+https://github.com/OlariRikas/rikas-webhook.git"
   },
   "bugs": {
     "url": "https://github.com/OlariRikas/rikas-webhook/issues"
